Résolution bug nastage !important utilisé à voir si possible de supprimer, hélas toujours 8 px en moins pour le collapse

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -62,7 +62,7 @@ header {
 }
 main {
   .dimension__page {
-    min-height: 800px;
+    height: 100%;
   }
   .img__background--about {
     object-fit: cover;
@@ -156,7 +156,7 @@ main {
     .redbox__design {
       .txt__redbox {
         color: white; 
-        margin-left: 15px;
+        margin-left: 15px !important ;
         font-weight: 700;
         font-size: 24px;
         position: relative;
@@ -327,6 +327,7 @@ footer {
       .redbox__design {
         .txt__redbox {
           font-size: 13px; 
+          margin-left: 10px !important;
 
         }
         .icon__chevron {
@@ -334,10 +335,11 @@ footer {
           height: 9.14px;
         
         }
-        width: 100%;
+        width: 95vw;
         height: 30px;
       }
     }
+    
     height: 100%;
   }
   .copyright {
